--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 09 - Tip Calculator App/.idea/modules.xml
 09 - Tip Calculator App/.idea/vcs.xml
 09 - Tip Calculator App/.idea/workspace.xml
+.idea/Frontend Mentor.iml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
